--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Tom Preston-Werner" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
+   <meta name="author" content="Robert Schonberger" />
+   <link href="http://www.schonberger.org/atom.xml" rel="alternate" title="Robert Schonberger" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -18,7 +18,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
+    <a href="/">Robert Schonberger at thought</a>
     <a class="extra" href="/">home</a>
   </div>
   
@@ -27,34 +27,40 @@
   <div class="footer">
     <div class="contact">
       <p>
-        Tom Preston-Werner<br />
-        Cofounder of <a href="http://github.com/">GitHub</a><br />
-        tom@mojombo.com
+        Robert Schönberger<br />
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
-        <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
-        <a href="http://flickr.com/photos/mojombo/">flickr.com/photos/mojombo</a>
+	robert strudel schonberger dot org
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
+      <a href="/atom.xml">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
   </div>
 </div>
+<script type="text/javascript"><!--
+google_ad_client = "pub-7169408085887874";
+/* 728x90, created 2/8/09 */
+google_ad_slot = "1701697470";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-6016902-1");
+var pageTracker = _gat._getTracker("UA-1978363-1");
 pageTracker._trackPageview();
 </script>
-
 </body>
 </html>
