--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 <div id="post">
+<!-- google_ad_section_start -->
 {{ content }}
+<!-- google_ad_section_end -->
 </div>
 
 <div id="related">
