add line ads to posts, and then add disqus down the bottom

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,17 @@ layout: default
 {{ content }}
 <!-- google_ad_section_end -->
 </div>
-
+<script type="text/javascript"><!--
+google_ad_client = "pub-7169408085887874";
+/* 468x15, created 2/10/09 */
+google_ad_slot = "6496721688";
+google_ad_width = 468;
+google_ad_height = 15;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 <div id="related">
   <h2>Related Posts</h2>
   <ul class="posts">
@@ -15,3 +25,6 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+<div id="disqus_thread"></div>
+<script type="text/javascript" src="http://disqus.com/forums/robscblog/embed.js"></script>
+<noscript><a href="http://robscblog.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
