make the post RAW instead

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,9 @@ layout: default
 ---
 <div id="post">
 <!-- google_ad_section_start -->
-{{ content | textilize }}
+{% raw %}
+	{{ content }}
+{% endraw %}
 <!-- google_ad_section_end -->
 </div>
 <script type="text/javascript"><!--
