--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div id="post">
 <!-- google_ad_section_start -->
-{{ page.content }}
+{{ content }}
 <!-- google_ad_section_end -->
 </div>
 <script type="text/javascript"><!--
