more highlight funniness

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     <a href="/">Robert Schonberger at thought</a>
     <a class="extra" href="/">home</a>
   </div>
-  {{ content }}
+  {{ page.content }}
   <div class="footer">
     <div class="contact">
       <p>
