--- a/css/screen.css
+++ b/css/screen.css
@@ -66,11 +66,11 @@ ul.posts {
     line-height: 1.75em;
   }
 
-  ul.posts span {
+/*  ul.posts span {
     color: #aaa;
     font-family: Monaco, "Courier New", monospace;
     font-size: 80%;
-  }
+  }*/
 
 /*****************************************************************************/
 /*
